--- a/index.html
+++ b/index.html
@@ -3,11 +3,27 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>Yvon's Portfolio</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    <header>
+        <h1>Yvon Meunier</h1>
+        <p>Full time student at École des Technologies Supérieures who is passinate about programming, cybersecurity and gamedev</p>
+        <img class="pfp" src="/assets/bread_turtle.jpg" alt="">
+    </header>
+    <main>
+        <div class="mb-3">
+            <div class="container-xxl">
+                <div class="col-md-8 mx-auto text-center">
+
+
+
+                </div>
+            </div>
+        </div>
+    </main>
+
     <!--Bootstrap-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
     <!--Popper and Bootstrap JS-->
