--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" data-bs-theme="dark">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -7,18 +7,13 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
   </head>
   <body>
-    <header>
-        <h1>Yvon Meunier</h1>
-        <p>Full time student at École des Technologies Supérieures who is passinate about programming, cybersecurity and gamedev</p>
-        <img class="pfp" src="/assets/bread_turtle.jpg" alt="">
-    </header>
     <main>
-        <div class="mb-3">
+        <div class="mb-3" id="content">
             <div class="container-xxl">
                 <div class="col-md-8 mx-auto text-center">
-
-
-
+                    <h1>Yvon Meunier</h1>
+                    <p>Full time student at École des Technologies Supérieures who is passinate about programming, cybersecurity and gamedev</p>
+                    <img class="pfp" src="/assets/bread_turtle.jpg" alt="">
                 </div>
             </div>
         </div>
