feat : changed the image for a pic of myself

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 <div class="col-md-8 mx-auto text-center">
                     <h1>Yvon Meunier</h1>
                     <p>Full time student at École des Technologies Supérieures who is passinate about programming, cybersecurity and gamedev</p>
-                    <img class="pfp" src="/assets/bread_turtle.jpg" alt="">
+                    <img class="pfp" src="assets/me.jpg" alt="">
                 </div>
             </div>
         </div>
