--- a/index.html
+++ b/index.html
@@ -5,17 +5,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Yvon's Portfolio</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
-  </head>
+    <link rel="stylesheet" href="index.css">
+</head>
   <body>
     <main>
         <div class="mb-3" id="content">
-            <div class="container-xxl">
+            <!--Banner-->
+            <!--TODO : Gradient... Green maybe?-->
+            <div class="container-xxl" id="banner">
+                <!--Banner-->
+                <!--TODO : Gradient... Green maybe?-->
                 <div class="col-md-8 mx-auto text-center">
                     <h1>Yvon Meunier</h1>
                     <p>Full time student at École des Technologies Supérieures who is passinate about programming, cybersecurity and gamedev</p>
-                    <img class="pfp" src="assets/me.jpg" alt="">
+                    <img class="rounded-5 mx-auto d-block img-fluid mh-50" src="assets/me.jpg" alt="pic of myself">
                 </div>
             </div>
+            <div class="container-xxl">
+                <div class="col-md-8 mx-auto text-center">
+                </div>
+            </div>
+            
         </div>
     </main>
 
