feat : added a card for the cv

--- a/index.html
+++ b/index.html
@@ -9,23 +9,28 @@
 </head>
   <body>
     <main>
-        <div class="mb-3" id="content">
-            <!--Banner-->
-            <!--TODO : Gradient... Green maybe?-->
-            <div class="container-xxl" id="banner">
-                <!--Banner-->
-                <!--TODO : Gradient... Green maybe?-->
-                <div class="col-md-8 mx-auto text-center">
+        <div class="mb-3">
+            <div id="banner">
+                <div class="col-md-8 mx-auto text-center pt-3 pb-4">
                     <h1>Yvon Meunier</h1>
                     <p>Full time student at École des Technologies Supérieures who is passinate about programming, cybersecurity and gamedev</p>
-                    <img class="rounded-5 mx-auto d-block img-fluid mh-50" src="assets/me.jpg" alt="pic of myself">
+                    <img id="pfp" class="rounded-5 mx-auto d-block img-fluid" src="assets/me.jpg" alt="pic of myself">
                 </div>
             </div>
-            <div class="container-xxl">
+            <!--Content-->
+            <div class="container-xxl pt-3">
                 <div class="col-md-8 mx-auto text-center">
+                    <!--CV-->
+                    <a class="card text-bg-light" href="#">
+                        <div class="card-body">
+                            <h2 class="card-title">About me</h2>
+                            <p class="card-text">
+                                A simple page where you get to learn about me : cool projects, education, what I like, ect.
+                            </p>
+                        </div>
+                    </a>
                 </div>
             </div>
-            
         </div>
     </main>
 
