feat : aboutme page with WIP elements

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
             <!--Content-->
             <div class="container-xxl pt-3">
                 <div class="col-md-8 mx-auto text-center">
-                    <!--CV-->
-                    <a class="card text-bg-light" href="#">
+                    <!--About Me-->
+                    <a class="card text-bg-light mb-3" href="#">
                         <div class="card-body">
                             <h2 class="card-title">About me</h2>
                             <p class="card-text">
@@ -29,6 +29,16 @@
                             </p>
                         </div>
                     </a>
+                    <div class="card text-bg-light mb-3">
+                        <div class="card-body">
+                            <h2 class="card-title">
+                            Curriculum Vitae
+                        </h2>
+                        <p class="card-text">
+                            My Curriculum Vitae
+                        </p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
