feat : rendered a triangle

--- a/webgl/HelloTriangle/index.html
+++ b/webgl/HelloTriangle/index.html
@@ -5,10 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WebGL - Hello... TRIANGLE!?</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 
 <body>
-    
+     <canvas id="c"></canvas>
+     <script src="https://greggman.github.io/webgl-lint/webgl-lint.js"></script>
+     <script src="main.js"></script>
 </body>
 
 </html>
