--- a/webgl/SpinTriangle/index.html
+++ b/webgl/SpinTriangle/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WebGL - Hello... TRIANGLE!?</title>
+    <title>WebGL - Triangle... but spinning</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -15,3 +15,4 @@
 </body>
 
 </html>
+
