Added links and fixed typos

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <div id="banner">
                 <div class="col-md-8 mx-auto text-center pt-3 pb-4">
                     <h1>Yvon Meunier</h1>
-                    <p>Full time student at École des Technologies Supérieures who is passinate about programming, cybersecurity and gamedev</p>
+                    <p>Full time student at École de Technologie Supérieure who is passinate about programming, cybersecurity and gamedev</p>
                     <img id="pfp" class="rounded-5 mx-auto d-block img-fluid" src="assets/me.jpg" alt="pic of myself">
                 </div>
             </div>
@@ -21,7 +21,7 @@
             <div class="container-xxl pt-3">
                 <div class="col-md-8 mx-auto text-center">
                     <!--About Me-->
-                    <a class="card text-bg-light mb-3" href="#">
+                    <a class="card text-bg-light mb-3" href="/aboutme/">
                         <div class="card-body">
                             <h2 class="card-title">About me</h2>
                             <p class="card-text">
@@ -39,6 +39,15 @@
                         </p>
                         </div>
                     </div>
+                    <!--Projects-->
+                    <a class="card text-bg-light mb-3" href="#">
+                        <div class="card-body">
+                            <h2 class="card-title">About me</h2>
+                            <p class="card-text">
+                                A simple page where you get to learn about me : cool projects, education, what I like, ect.
+                            </p>
+                        </div>
+                    </a>
                 </div>
             </div>
         </div>
