--- a/aboutme/index.html
+++ b/aboutme/index.html
@@ -34,7 +34,7 @@
                         </p>
                         </div>
                     </div>
-                    <div class="card text-bg-light mb-3">
+                    <a class="card text-bg-light mb-3" href="/portfolio/projects/">
                         <div class="card-body">
                             <h2 class="card-title">
                             Projects
@@ -43,7 +43,7 @@
                             Are you interested in seeing some of my projects?
                         </p>
                         </div>
-                    </div>
+                    </a>
                     <div class="card text-bg-light mb-3">
                         <div class="card-body">
                             <h2 class="card-title">
