--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div class="container-xxl pt-3">
                 <div class="col-md-8 mx-auto text-center">
                     <!--About Me-->
-                    <a class="card text-bg-light mb-3" href="/aboutme/">
+                    <a class="card text-bg-light mb-3" href="/portfolio/aboutme/">
                         <div class="card-body">
                             <h2 class="card-title">About me</h2>
                             <p class="card-text">
@@ -39,15 +39,6 @@
                         </p>
                         </div>
                     </div>
-                    <!--Projects-->
-                    <a class="card text-bg-light mb-3" href="#">
-                        <div class="card-body">
-                            <h2 class="card-title">About me</h2>
-                            <p class="card-text">
-                                A simple page where you get to learn about me : cool projects, education, what I like, ect.
-                            </p>
-                        </div>
-                    </a>
                 </div>
             </div>
         </div>
