Fix : yet another typo

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <div id="banner">
                 <div class="col-md-8 mx-auto text-center pt-3 pb-4">
                     <h1>Yvon Meunier</h1>
-                    <p>Full time student at École de Technologie Supérieure who is passinate about programming, cybersecurity and gamedev</p>
+                    <p>Full time student at École de Technologie Supérieure who is passionate about programming, cybersecurity and gamedev</p>
                     <img id="pfp" class="rounded-5 mx-auto d-block img-fluid" src="assets/me.jpg" alt="pic of myself">
                 </div>
             </div>
