fix : more links fixed
I am really bad at this huh

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div class="container-xxl pt-3">
                 <div class="col-md-8 mx-auto text-center">
                     <!--About Me-->
-                    <a class="card text-bg-light mb-3" href="/portfolio/aboutme/">
+                    <a class="card text-bg-light mb-3" href="./aboutme/">
                         <div class="card-body">
                             <h2 class="card-title">About me</h2>
                             <p class="card-text">
