--- a/projects/index.html
+++ b/projects/index.html
@@ -20,7 +20,7 @@
             </p>
         </div>
     </a>
-    <a class="card text-bg-light mb-3" href="./graphics/water/">
+    <a class="card text-bg-light mb-3" href="/graphics/water/">
         <div class="card-body">
             <h2 class="card-title">Water simulation</h2>
             <p class="card-text">
