--- a/projects/index.html
+++ b/projects/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <h2>This is a Work in Progress (WIP) page</h2>
-    <a class="card text-bg-light mb-3" href="#">
+    <a class="card text-bg-light mb-3" href="portfolio/graphics/SpinTriangle">
         <div class="card-body">
             <h2 class="card-title">Spinning Triangle</h2>
             <p class="card-text">
@@ -20,7 +20,7 @@
             </p>
         </div>
     </a>
-    <a class="card text-bg-light mb-3" href="/graphics/water/">
+    <a class="card text-bg-light mb-3" href="portfolio/graphics/water/">
         <div class="card-body">
             <h2 class="card-title">Water simulation</h2>
             <p class="card-text">
